# CurrencyConverter

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: handlers.py  main.py
app/converting/: converter.py
app/rate_parsing/: parsers.py
backend/app/: handlers.py  main.py
backend/app/converting/: converter.py
converting/: converter.py
log/: core.py
rate_parsing/: parsers.py
tests/: .coverage  pytest.ini  test_converter.py  test_handlers.py  test_main.py  test_parsers.py  test_rate_parser.py
