[tool.poetry]
name = "CurrencyConverter"
version = "0.1.0"
description = ""
authors = ["Evgeny Yanaki"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-mock = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
